--- a/app/src/main/res/layout/activity_view_expense.xml
+++ b/app/src/main/res/layout/activity_view_expense.xml
@@ -13,34 +13,29 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="136dp"
         android:text="-select date-"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
-        app:layout_constraintStart_toEndOf="@+id/textView18" />
+        app:layout_constraintStart_toEndOf="@+id/textView18"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_to_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="84dp"
         android:layout_toEndOf="@+id/textView20"
         android:text="-select date-"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.68"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView20"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
+        app:layout_constraintStart_toEndOf="@+id/textView20" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="16dp"
         android:text="From"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView_from_date"
@@ -51,20 +46,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="136dp"
         android:layout_toEndOf="@+id/textView_from_date"
         android:text="To"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_to_date"
-        app:layout_constraintStart_toEndOf="@+id/textView_from_date" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="281dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginLeft="28dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="64dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -121,8 +117,9 @@
         android:id="@+id/relativeLayout"
         android:layout_width="359dp"
         android:layout_height="321dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="188dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -140,8 +137,9 @@
             android:id="@+id/recycler_view_expenses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/chart"
+            android:layout_marginStart="23dp"
             android:scrollbars="vertical"
             android:visibility="invisible" />
 
@@ -149,12 +147,30 @@
 
     <TextView
         android:id="@+id/textView16"
+        android:layout_width="114dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="152dp"
+        android:layout_marginTop="100dp"
+        android:text="Select Date Range"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="112dp"
-        android:layout_marginTop="60dp"
-        android:text="Select Date Range"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_above="@+id/recycler_view_expenses"
+        android:layout_alignParentStart="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="120dp"
+        android:background="@color/cast_intro_overlay_button_background_color"
+        android:text="Show"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView_to_date"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
