--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/view_expenses"
             android:icon="@drawable/ic_attach_money"
-            android:title="View Expwnses" />
+            android:title="View Expenses" />
         <item
             android:id="@+id/search_for_places"
             android:icon="@drawable/ic_my_location"
