--- a/app/src/main/res/layout/activity_view_expense.xml
+++ b/app/src/main/res/layout/activity_view_expense.xml
@@ -115,7 +115,7 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="359dp"
+        android:layout_width="400dp"
         android:layout_height="321dp"
         android:layout_marginEnd="28dp"
         android:layout_marginLeft="12dp"
@@ -135,8 +135,8 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_expenses"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_marginStart="23dp"
