--- a/app/src/main/res/layout/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout/nav_header_navigation_drawer.xml
@@ -16,6 +16,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/ic_action_user" />
 
