--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -5,10 +5,6 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/edit_user_profile"
-            android:icon="@drawable/ic_action_user"
-            android:title="Edit User Profile" />
-        <item
             android:id="@+id/edit_vehicle"
             android:icon="@drawable/ic_directions_car"
             android:title="Edit Vehicles" />
@@ -25,6 +21,10 @@
             android:icon="@drawable/ic_my_location"
             android:title="Search For Places" />
 
+        <item
+            android:id="@+id/view_offers"
+            android:icon="@drawable/ic_action_user"
+            android:title="View Offers" />
         <item
             android:id="@+id/settings"
             android:icon="@drawable/ic_menu_manage"
