--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -76,6 +76,18 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/home_content" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/home_content" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:tint="@android:color/white"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="bottom|right"
+        app:srcCompat="@drawable/ic_add_circle_outline" />
 
 </android.support.design.widget.CoordinatorLayout>
