--- a/app/src/main/res/layout/offer_card.xml
+++ b/app/src/main/res/layout/offer_card.xml
@@ -46,6 +46,17 @@
                 android:text="Store Name"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/description_offer_card" />
+
+            <Button
+                android:id="@+id/btn_view_in_map"
+                android:layout_width="121dp"
+                android:layout_height="36dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:text="Show in map"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/store_offer_card" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
